--- a/app/src/main/res/layout/activity_cliente_menu.xml
+++ b/app/src/main/res/layout/activity_cliente_menu.xml
@@ -69,6 +69,14 @@
                 android:text="@string/boton_ver_compras_realizadas" />
 
             <Button
+                android:id="@+id/button6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:width="250dp"
+                android:onClick="actualizarPerfil"
+                android:text="@string/boton_actualizar_perfil" />
+
+            <Button
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
