--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -39,6 +39,41 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginLeft="12dp"
+                    android:text="@string/registro_imagen"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imagemId"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_below="@+id/textView"
+                        android:layout_alignEnd="@+id/textView"
+                        android:layout_alignRight="@+id/textView"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/avatar2" />
+
+                    <Button
+                        android:id="@+id/btnCargarImg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:width="250dp"
+                        android:onClick="cargarImagen"
+                        android:text="@string/boton_imagen" />
+                </LinearLayout>
+
+                <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -172,6 +207,28 @@
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
                     android:ems="10"
+                    android:inputType="textPassword" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="24dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:visibility="gone"
+                    android:text="@string/registro_repite_password"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/editText11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:ems="10"
+                    android:visibility="gone"
                     android:inputType="textPassword" />
 
                 <LinearLayout
